--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,8 @@
    },
    "files.autoSave": "off",
    "workbench.colorTheme": "One Dark Pro Darker",
-   "editor.defaultFormatter": "HookyQR.beautify"
+   "editor.defaultFormatter": "HookyQR.beautify",
+   "cSpell.words": [
+      "buildpack"
+   ]
 }
